node-red-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-red-service
spec:
  selector:
    app: node-red
  ports:
  - protocol: TCP
    port: 1880
  type: ClusterIP
