ingress-dogtracker.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dogtracker
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: nodered.nuc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-red-service
            port:
              number: 1880
  - host: prometheus.nuc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-service
            port:
              number: 9090
